--- a/helm-chart-sources/mqtt/values.yaml
+++ b/helm-chart-sources/mqtt/values.yaml
@@ -15,7 +15,7 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
@@ -37,6 +37,7 @@ securityContext: {}
 
 service:
   type: LoadBalancer
+  loadBalancerIP: 10.252.30.4
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
